<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gerdjikov.mathgame.MyDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/etUserNameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPasswordLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUserNameLogin"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordLog"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_login" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
