<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.gerdjikov.mathgame.GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="75dp">

            <TextView
                android:id="@+id/leftNumber"
                android:layout_width="190dp"
                android:layout_height="@dimen/label_height"
                android:layout_weight="1"
                android:text="213"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="58dp"
                android:layout_height="@dimen/label_height"
                android:layout_weight="1"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/Snow"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/rightNumber"
                android:layout_width="190dp"
                android:layout_height="@dimen/label_height"
                android:layout_weight="1"
                android:text="213"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll1"
            android:orientation="horizontal"
            android:layout_marginTop="75dp">

            <Button
                android:id="@+id/leftButton"
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/middleButton"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape4"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="135dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape3"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:orientation="horizontal"
            android:layout_marginTop="75dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/time_left"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginLeft="50dp"/>

            <TextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@android:color/background_light"
                android:textColorHighlight="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lives"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/lives"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/score"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
